# uno-not-uno

./: .code-workspace  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yaml  docker-compose.yaml  requirements-dev.txt
accept/: README.md  pyproject.toml  pytest.ini
accept/src/accept/: driver.py  generate.py  main.py
accept/src/accept/drivers/: http.py  selenium.py
accept/src/accept/screens/: http.py  selenium.py
accept/tests/: conftest.py  test_main.py
automation/: README.md  pyproject.toml
automation/src/bot/: bot.py  main.py  (+1 more)
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __main__.py  admin.py  database.py  init_db.py
backend/app/lobby/: routes.py  schemas.py
backend/app/tests/: __init__.py  test_app.py  test_reload.py
backend/src/app/: admin.py  auth.py  client.py  database.py  main.py  reload.py  testclient.py
backend/src/app/lobby/: dependencies.py  routes.py  schemas.py
backend/src/backend/: admin.py  auth.py  cli.py  exceptions.py  init_db.py  main.py  reload.py  token.py
backend/src/backend/game/: schemas.py
backend/src/backend/lobby/: dependencies.py  routes.py  schemas.py
backend/src/pesten/: lobby.py
backend/tests/: conftest.py  test_auth.py  test_lobby.py  test_main.py
design/wireframe/: board.html  index.html  lobbies.html  main.css  style.css
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yaml  docker-compose.yaml
e2e/: pyproject.toml
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  sprite.py  vite.config.js
frontend-vue/: README.md  package-lock.json  package.json  tsconfig.app.json  typed-router.d.ts  vite.config.ts
frontend-vue/src/: App.vue  main.ts
frontend/src/: GamePage.jsx  LobbiesPage.jsx  LoginPage.jsx  RegisterPage.jsx  main.jsx  server.js
pypesten_dep/: .gitignore  pyproject.toml
scripts/: README.md  generate_env.py  get_game.py  get_token.py  init_lobbies.py  pyproject.toml  sprite.py
tests/: conftest.py  main.py  prototype.ipynb  test_auth.py  test_backend.py  test_game.py  test_lobby.py  test_pypesten.py  test_reload.py  test_user.py
tests/backend/: __init__.py  test_app.py  test_app_new.py  test_reload.py
tests/pypesten/: testgame.pickle
(+42 files in other folders)
