[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"

[tool.uv.sources]
pypesten = { path = "../pypesten", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
]
