[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "httpx>=0.28.1",
  "passlib>=1.7.4",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
  "psycopg2",
  "python-dotenv>=1.1.1",
  "pwdlib[argon2]>=0.3.0",
  "httpx-ws>=0.9.0",
]

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"
