[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backend",
    "pypesten",
]

[tool.uv.sources]
pypesten = { path = "../pypesten", editable = true }
backend = { path = "../backend", editable = true }
